twentieth, disable zoom bug, z-index bug

--- a/style.css
+++ b/style.css
@@ -12,6 +12,12 @@ body {
   color: aliceblue;
 }
 
+html,
+body {
+  touch-action: manipulation; /* Deaktiver pinch-zoom */
+  overscroll-behavior: none; /* Hindrer overscroll-effekter */
+}
+
 .header {
   background-color: #000;
 }
@@ -145,7 +151,7 @@ body {
   background-size: cover; /* Changed from cover to contain */
   background-repeat: no-repeat;
   background-position: top-center;
-  z-index: 1;
+  z-index: 2;
 }
 
 /* Portrait mode (height > width) */
@@ -177,7 +183,7 @@ body {
   display: flex;
   flex-direction: column;
   gap: 10px;
-  z-index: 2;
+  z-index: 3;
   padding: 20px; /* Added padding for better touch targets */
   background-color: rgba(0, 0, 0, 0.3); /* Semi-transparent background */
   border-radius: 10px;
@@ -188,7 +194,7 @@ body {
   right: 5%;
   top: 50%;
   transform: translateY(-50%);
-  z-index: 2;
+  z-index: 3;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -276,7 +282,7 @@ body {
   border: none;
   border-radius: 8px;
   cursor: pointer;
-  z-index: 10; /* Sørger for at knappen er synlig */
+  z-index: 1; /* Sørger for at knappen er synlig */
 }
 
 #exit-button:hover {
